Source/WebCore/platform/graphics/x11/PlatformDisplayX11.cpp
@@ -42,6 +42,10 @@
 #include <EGL/eglext.h>
 #endif
 
+#if USE(GLX)
+#include <GL/glx.h>
+#endif
+
 #if USE(LCMS)
 #include <lcms2.h>
 #endif
@@ -128,6 +132,26 @@ bool PlatformDisplayX11::supportsXDamage(Optional<int>& damageEventBase, Optiona
     damageEventBase = m_damageEventBase;
     damageErrorBase = m_damageErrorBase;
     return m_supportsXDamage.value();
+}
+
+bool PlatformDisplayX11::supportsGLX(Optional<int>& glxErrorBase) const
+{
+#if USE(GLX)
+    if (!m_supportsGLX) {
+        m_supportsGLX = false;
+        if (m_display) {
+            int eventBase, errorBase;
+            m_supportsGLX = glXQueryExtension(m_display, &errorBase, &eventBase);
+            if (m_supportsGLX.value())
+                m_glxErrorBase = errorBase;
+        }
+    }
+
+    glxErrorBase = m_glxErrorBase;
+    return m_supportsGLX.value();
+#else
+    return false;
+#endif
 }
 
 void* PlatformDisplayX11::visual() const
