Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreX11.cpp
@@ -46,10 +46,18 @@
 #include <wtf/HashMap.h>
 #include <wtf/NeverDestroyed.h>
 
+#if USE(GLX)
+#include <X11/Xproto.h>
+#include <GL/glxproto.h>
+#endif
+
 namespace WebKit {
 
 static Optional<int> s_damageEventBase;
 static Optional<int> s_damageErrorBase;
+#if USE(GLX)
+static Optional<int> s_glxErrorBase;
+#endif
 
 class XDamageNotifier {
     WTF_MAKE_NONCOPYABLE(XDamageNotifier);
@@ -135,6 +143,10 @@ private:
 bool AcceleratedBackingStoreX11::checkRequirements()
 {
     auto& display = downcast<WebCore::PlatformDisplayX11>(WebCore::PlatformDisplay::sharedDisplay());
+#if USE(GLX)
+    // GLX is optional, he we just want the error base.
+    display.supportsGLX(s_glxErrorBase);
+#endif
     return display.supportsXComposite() && display.supportsXDamage(s_damageEventBase, s_damageErrorBase);
 }
 
@@ -155,13 +167,26 @@ static inline unsigned char xDamageErrorCode(unsigned char errorCode)
     return static_cast<unsigned>(s_damageErrorBase.value()) + errorCode;
 }
 
+#if USE(GLX)
+static inline unsigned char glxErrorCode(unsigned char errorCode)
+{
+    ASSERT(s_glxErrorBase);
+    return static_cast<unsigned>(s_glxErrorBase.value()) + errorCode;
+}
+#endif
+
 AcceleratedBackingStoreX11::~AcceleratedBackingStoreX11()
 {
     if (!m_surface && !m_damage)
         return;
 
     Display* display = downcast<WebCore::PlatformDisplayX11>(WebCore::PlatformDisplay::sharedDisplay()).native();
-    WebCore::XErrorTrapper trapper(display, WebCore::XErrorTrapper::Policy::Crash, { BadDrawable, xDamageErrorCode(BadDamage) });
+    Vector<unsigned char> errorList = { BadDrawable, xDamageErrorCode(BadDamage) };
+#if USE(GLX)
+    if (s_glxErrorBase)
+        errorList.append(glxErrorCode(GLXBadWindow));
+#endif
+    WebCore::XErrorTrapper trapper(display, WebCore::XErrorTrapper::Policy::Crash, WTFMove(errorList));
     if (m_damage) {
         XDamageNotifier::singleton().remove(m_damage.get());
         m_damage.reset();
@@ -178,7 +203,12 @@ void AcceleratedBackingStoreX11::update(const LayerTreeContext& layerTreeContext
     Display* display = downcast<WebCore::PlatformDisplayX11>(WebCore::PlatformDisplay::sharedDisplay()).native();
 
     if (m_surface) {
-        WebCore::XErrorTrapper trapper(display, WebCore::XErrorTrapper::Policy::Crash, { BadDrawable, xDamageErrorCode(BadDamage) });
+        Vector<unsigned char> errorList = { BadDrawable, xDamageErrorCode(BadDamage) };
+#if USE(GLX)
+        if (s_glxErrorBase)
+            errorList.append(glxErrorCode(GLXBadWindow));
+#endif
+        WebCore::XErrorTrapper trapper(display, WebCore::XErrorTrapper::Policy::Crash, WTFMove(errorList));
         if (m_damage) {
             XDamageNotifier::singleton().remove(m_damage.get());
             m_damage.reset();
@@ -198,7 +228,12 @@ void AcceleratedBackingStoreX11::update(const LayerTreeContext& layerTreeContext
     float deviceScaleFactor = m_webPage.deviceScaleFactor();
     size.scale(deviceScaleFactor);
 
-    WebCore::XErrorTrapper trapper(display, WebCore::XErrorTrapper::Policy::Crash, { BadDrawable, xDamageErrorCode(BadDamage) });
+    Vector<unsigned char> errorList = { BadDrawable, xDamageErrorCode(BadDamage) };
+#if USE(GLX)
+    if (s_glxErrorBase)
+        errorList.append(glxErrorCode(GLXBadWindow));
+#endif
+    WebCore::XErrorTrapper trapper(display, WebCore::XErrorTrapper::Policy::Crash, WTFMove(errorList));
     ASSERT(downcast<WebCore::PlatformDisplayX11>(WebCore::PlatformDisplay::sharedDisplay()).native() == gdk_x11_display_get_xdisplay(gdk_display_get_default()));
 #if USE(GTK4)
     auto* visual = WK_XVISUAL(downcast<WebCore::PlatformDisplayX11>(WebCore::PlatformDisplay::sharedDisplay()));
